# aether

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  TESTS_TODO.md  deny.toml  flake.nix  garnix.yaml  justfile  run_distro_test.sh  run_local_test.sh  rust-toolchain.toml  secrets.nix  setup-nix.sh
architectures/centralized/client/: Cargo.toml  packages.nix
architectures/centralized/client/src/: app.rs  main.rs
architectures/centralized/local-testnet/: Cargo.toml
architectures/centralized/local-testnet/src/: main.rs
architectures/centralized/server/: Cargo.toml  packages.nix
architectures/centralized/server/src/: app.rs  dashboard.rs  main.rs  ssh_monitor.rs  web.rs
architectures/centralized/shared/: Cargo.toml
architectures/centralized/shared/src/: lib.rs  protocol.rs
architectures/centralized/testing/: Cargo.toml
architectures/centralized/testing/src/: client.rs  lib.rs  server.rs  test_utils.rs
architectures/centralized/testing/tests/: integration_tests.rs
architectures/decentralized/solana-client/: Cargo.toml
architectures/decentralized/solana-client/src/: app.rs  main.rs
architectures/decentralized/solana-common/: Cargo.toml
architectures/decentralized/solana-common/src/: backend.rs  instructions.rs  lib.rs  retry.rs  utils.rs
architectures/decentralized/testing/: Cargo.toml  packages.nix
architectures/decentralized/testing/src/: chaos.rs  docker_setup.rs  docker_watcher.rs  utils.rs
architectures/decentralized/testing/tests/: chaos_tests.rs  integration_tests.rs
architectures/inference-only/inference-node/: Cargo.toml  packages.nix
architectures/inference-only/inference-node/src/: lib.rs  main.rs
python/: .gitignore  Cargo.toml  README.md  build.rs  default.nix  flash-attn.nix  liger-kernel.nix  pyproject.toml  torchdata.nix  torchtitan.nix
python/extension-impl/: Cargo.toml
python/extension-impl/src/: extension.rs  lib.rs
python/python/aether/: __init__.py  _ext.py  dtensor_helpers.py
python/python/aether/models/: __init__.py  causal_lm.py  factory.py  hf_transformers.py  ttitan.py
python/python/aether/sidecar/: __main__.py  api.py
python/python/aether/vllm/: engine.py  run_inference_subprocess.py  rust_bridge.py
python/python/psyche/: _ext.py
python/python/psyche/models/: __init__.py  causal_lm.py  hf_transformers.py
python/python/psyche/sidecar/: __main__.py
python/python/psyche/vllm/: run_inference_subprocess.py  rust_bridge.py
python/src/: lib.rs
python/stub/torch/: pyproject.toml
python/tests/: test_causal_lm.py  test_ci_scripts.py  test_dtensor_helpers.py  test_hf_lora.py  test_import_side_effects.py  test_operational_script_hardening.py  test_prepare_sft_local.py  test_sidecar_api.py  test_sidecar_main_guard.py  test_ttitan.py  test_vllm_rust_bridge.py
shared/client/: Cargo.toml  README.md
shared/client/src/: cli.rs  client.rs  fetch_data.rs  lib.rs  protocol.rs  tui.rs
shared/client/src/state/: cooldown.rs  evals.rs  init.rs  mod.rs  prompt.rs  prompt_texts.rs  round_state.rs  stats.rs  steps.rs  train.rs  types.rs  warmup.rs  witness.rs
shared/coordinator/: Cargo.toml  README.md
shared/coordinator/src/: commitment.rs  committee_selection.rs  coordinator.rs  data_selection.rs  lib.rs  model.rs
shared/core/: Cargo.toml  README.md
shared/core/src/: batch_id.rs  bloom.rs  cancellable_barrier.rs  data_shuffle.rs  definitions.rs  deterministic_shuffle.rs  fixed_string.rs  fixed_vec.rs  interval_tree.rs  lib.rs  merkle_tree.rs  node_identity.rs  running_average.rs  sha256.rs  sized_iterator.rs  small_boolean.rs  swap_or_not.rs  testing.rs  token_size.rs
shared/eval/: Cargo.toml  README.md
shared/eval/examples/: evaluate.rs
shared/eval/src/: harness.rs  lib.rs  traits.rs
shared/eval/src/tasks/: arc.rs  boolq.rs  ceval.rs  hellaswag.rs  mmlu.rs  mmlu_cf.rs  mmlu_pro.rs  mod.rs  openbookqa.rs  piqa.rs
shared/event-sourcing/: Cargo.toml  README.md
shared/event-sourcing/src/: events.rs  lib.rs  projection.rs  store.rs  timeline.rs  tracing_layer.rs
shared/inference/: Cargo.toml  README.md
shared/inference/src/: lib.rs  node.rs  protocol.rs  protocol_handler.rs  vllm.rs
shared/inference/tests/: test_inference_node.rs  test_vllm_integration.rs
shared/metrics/: Cargo.toml  README.md
shared/metrics/src/: iroh.rs  lib.rs
shared/modeling/: Cargo.toml  README.md  packages.nix
shared/modeling/examples/: inference.rs  train.rs
shared/modeling/src/: attention.rs  auto_config.rs  auto_model.rs  batcher.rs  causal_language_model.rs  device_utils.rs  distro.rs  dummy.rs  fp32_gradient_accumulator.rs  lib.rs  muon.rs  optimizer.rs  parallelism.rs  python_causal_lm.rs  python_distributed_causal_lm.rs  python_distributed_trainer.rs  rms_norm.rs  rope.rs  safetensor_utils.rs  sampling.rs  token_output_stream.rs  trainer.rs  variable.rs
shared/modeling/src/models/: deepseek.rs  llama.rs
shared/modeling/tests/: deepseek_checkpoint.rs  llama_oracle.rs  rope_oracle.rs  training_oracle.rs
shared/network/: Cargo.toml  README.md
shared/network/examples/: bandwidth_test.rs
shared/network/src/: allowlist.rs  authenticable_identity.rs  connection_monitor.rs  latency_sorted.rs  lib.rs  local_discovery.rs  p2p_model_sharing.rs  router.rs  serializable_tensor.rs  serialized_distro.rs  signed_message.rs  state.rs  tcp.rs  test.rs  tui.rs  util.rs
shared/network/src/download/: manager.rs  mod.rs  scheduler.rs
shared/test-support/: Cargo.toml  README.md
shared/test-support/src/: lib.rs
shared/tui/: Cargo.toml  README.md
shared/tui/examples/: logs.rs  metrics.rs  minimal.rs  tabs.rs
shared/tui/src/: app.rs  lib.rs  logging.rs  terminal.rs
shared/watcher/: Cargo.toml  README.md
shared/watcher/src/: traits.rs  tui.rs  watcher.rs
tools/rust-tools/expand-distro/: Cargo.toml
tools/rust-tools/expand-distro/src/: main.rs
tools/rust-tools/observer/: Cargo.toml  packages.nix
tools/rust-tools/observer/src/: app.rs  main.rs  tui.rs  utils.rs
tools/rust-tools/psyche-sidecar/: Cargo.toml
tools/rust-tools/run-manager/: Cargo.toml  README.md  build.rs
(+383 files in other folders)
