[workspace]
members = [
  "architectures/centralized/*",
  "python/",
  "python/extension-impl/",
  "shared/*",
]
resolver = "2"

[workspace.metadata.crane]
name = "psyche-workspace"

[workspace.package]
version = "0.2.0"
license = "Apache-2.0"

[workspace.dependencies]
psyche-coordinator = { path = "./shared/coordinator" }
psyche-core = { path = "./shared/core" }
psyche-client = { path = "./shared/client" }
psyche-data-provider = { path = "./shared/data-provider" }
psyche-eval = { path = "./shared/eval" }
psyche-inference = { path = "./shared/inference" }
psyche-network = { path = "./shared/network" }
psyche-modeling = { path = "./shared/modeling" }
psyche-python-extension = { path = "./python" }
psyche-python-extension-impl = { path = "./python/extension-impl" }
psyche-tui = { path = "./shared/tui" }
psyche-watcher = { path = "./shared/watcher" }
psyche-metrics = { path = "./shared/metrics" }
psyche-event-sourcing = { path = "./shared/event-sourcing" }

hf-hub = { git = "https://github.com/NousResearch/hf-hub.git", rev = "269dc3df4e194f9071ddbdbd25ed90d4990f9262" }
tokio = { version = "1", features = [
  "io-util",
  "rt",
  "rt-multi-thread",
  "net",
  "macros",
  "time",
  "signal",
] }
tokio-stream = "0.1"
tokio-util = "0.7.12"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.28"
tracing = { version = "0.1.40", features = ["std"] }
bytes = "1.7.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
postcard = { version = "1.0.10", features = ["use-std"] }
sha2 = "0.10.8"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = { version = "0.4.38", features = ["clock"] }
fast-math = "0.1"
async-trait = "0.1.82"
iroh = { version = "0.97.0", features = ["metrics"] }
iroh-relay = { version = "0.97.0", features = ["metrics"] }
iroh-blobs = { version = "0.99", features = ["metrics"] }
iroh-gossip = { version = "0.97.0" }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
flume = "0.11.1"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
indicatif = "0.17.5"
tokenizers = { version = "0.20.0", default-features = false, features = [
  "onig",
] }
tch = { git = "https://github.com/NousResearch/tch-rs.git", rev = "dda507e05a776547a112b6854d1e611684f8c729" }
torch-sys = { git = "https://github.com/NousResearch/tch-rs.git", rev = "dda507e05a776547a112b6854d1e611684f8c729" }
pyo3-tch = { git = "https://github.com/NousResearch/tch-rs.git", rev = "dda507e05a776547a112b6854d1e611684f8c729" }
#tch = { path = "../tch-rs" }
#torch-sys = { path = "../tch-rs/torch-sys" }
#pyo3-tch = { path = "../tch-rs/pyo3-tch" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
serde_with = { version = "3.11.0", features = ["macros"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
thiserror = "2.0.3"
toml = "0.8.19"
ratatui = "0.28.1"
indexmap = { version = "2", features = ["serde"] }
clap-markdown = "0.1.4"
pyo3 = { version = "0.24" }

ts-rs = { path = "./vendor/ts-rs", features = [
  "psyche-impl",
] }
rayon = "1.10.0"
walkdir = "2.5"

# with iroh update need to specify digest and crypto-common versions
digest = { version = "=0.11.0-rc.10", default-features = false }
crypto-common = "0.2"

tikv-jemallocator = { version = "0.6.1", features = [
  "unprefixed_malloc_on_supported_platforms",
] }

# dev only
test-log = { version = "0.2.16", features = ["trace"] }
pretty_assertions = "1.4.1"
serial_test = "3.2.0"
rstest = "0.25.0"
proptest = "1.5.0"
psyche-test-support = { path = "./shared/test-support" }

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[workspace.lints.rust]
# Treat every warning as an error — but ONLY in our own crates. Workspace lints
# are inherited exclusively by members that opt in via `[lints] workspace = true`;
# the vendored crates under `vendor/` do not, so their pre-existing warnings stay
# non-fatal and a clean build stays green.
warnings = "deny"
# `unsafe` discipline: no silent unsafe operations inside `unsafe fn`.
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
# `correctness` lints are genuine bugs; make that explicit even though
# `warnings = "deny"` already covers them.
correctness = { level = "deny", priority = -1 }
# No `dbg!()` leftovers in committed code.
dbg_macro = "deny"

[workspace.metadata.release]
tag-name = "v{{version}}"
sign-tag = true
push = true
publish = false
