[package]
name = "psyche-python-extension"
version.workspace = true
edition = "2021"
build = "build.rs"

[lib]
name = "psyche_python_extension"
crate-type = ["cdylib"]

[dependencies]
psyche-python-extension-impl.workspace = true

[features]
parallelism = ["psyche-python-extension-impl/parallelism"]
