[package]
name = "aether-python-extension"
version.workspace = true
license.workspace = true
edition = "2021"
build = "build.rs"

[lib]
name = "aether_python_extension"
crate-type = ["cdylib"]

[dependencies]
aether-python-extension-impl.workspace = true

[features]
parallelism = ["aether-python-extension-impl/parallelism"]
# Enables python-extension link args in build.rs when building the cdylib.
python-extension = []

[lints]
workspace = true
