[project]
dependencies = [
    "transformers==4.57.3",
    "flash-linear-attention==0.4.0",
    "peft==0.18.0",
]
name = "aether-deps"
version = "0.1.0"
requires-python = "==3.12.*"

# these deps are provided by nix, never include them & their deps in the uv.lock
[tool.uv]
override-dependencies = [
  "torch==99.99.99",
  "torchtitan==99.99.99",
  "flash-attn==99.99.99",
  "liger-kernel==99.99.99",
]
[tool.uv.sources]
torch = { path = "stub/torch" }

[project.optional-dependencies]
tests = ["datasets", "pyarrow", "pytest"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["python"]
testpaths = ["tests"]
markers = [
  "unit: isolated tests with no external services or processes",
  "integration: tests spanning multiple modules or process boundaries",
  "oracle: correctness tests against an independent reference implementation",
  "gpu: tests requiring a CUDA-capable GPU",
  "distributed: tests requiring multiple ranks or processes",
  "vllm: tests requiring the optional vLLM runtime",
  "slow: tests excluded from the default fast feedback suite",
  "regression: tests preserving a specific bug fix",
]

[build-system]
requires = ["uv_build<0.9"]
build-backend = "uv_build"
