[package]
name = "psyche-python-extension-impl"
version.workspace = true
edition = "2021"

[dependencies]
tch.workspace = true
torch-sys.workspace = true
psyche-core.workspace = true
psyche-modeling = { workspace = true, features = ["python"] }
serde_json.workspace = true
tokio-util.workspace = true
pyo3.workspace = true
pyo3-tch.workspace = true
sysinfo = "0.30"
take_mut = "0.2.2"
tracing.workspace = true

[features]
parallelism = ["psyche-modeling/parallelism"]
