[package]
name = "aether-python-extension-impl"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
tch.workspace = true
aether-core.workspace = true
aether-modeling = { workspace = true, features = ["python"] }
serde_json.workspace = true
tokio-util.workspace = true
pyo3.workspace = true
pyo3-tch.workspace = true
sysinfo = "0.30"
tracing.workspace = true

[features]
parallelism = ["aether-modeling/parallelism"]

[lints]
workspace = true
