[package]
name = "aether-client"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
aether-core = { workspace = true, features = ["rand"] }
aether-coordinator.workspace = true
aether-data-provider = { workspace = true, features = ["remote"] }
aether-event-sourcing.workspace = true
aether-eval.workspace = true
aether-metrics.workspace = true
aether-modeling.workspace = true
aether-network.workspace = true
aether-tui.workspace = true
aether-python-extension-impl = { workspace = true, optional = true }
aether-watcher.workspace = true
postcard.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tch.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
rand.workspace = true
futures.workspace = true
hex = "0.4.3"
lazy_static = "1.5.0"
wandb = { git = "https://github.com/NousResearch/wandb-rs.git", rev = "db6118e3bf3526718c1097baecf36f564233a735" }
rand_chacha.workspace = true
thiserror.workspace = true
time.workspace = true
hf-hub.workspace = true
clap.workspace = true
sysinfo = "0.32.0"
iroh-blobs.workspace = true

[features]
parallelism = ["aether-modeling/parallelism"]
python = ["aether-python-extension-impl"]

[dev-dependencies]
bytemuck.workspace = true

[lints]
workspace = true
