[package]
name = "aether-client"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
aether-core = { workspace = true, features = ["rand"] }
aether-coordinator.workspace = true
aether-data-provider = { workspace = true, features = ["remote"] }
aether-event-sourcing.workspace = true
aether-eval.workspace = true
aether-metrics.workspace = true
aether-modeling.workspace = true
aether-network.workspace = true
aether-tui.workspace = true
aether-watcher.workspace = true
postcard.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tch.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
rand.workspace = true
futures.workspace = true
hex = "0.4.3"
lazy_static = "1.5.0"
wandb.workspace = true
thiserror.workspace = true
time.workspace = true
hf-hub.workspace = true
clap.workspace = true
iroh-blobs.workspace = true

[features]
parallelism = ["aether-modeling/parallelism"]
python = ["aether-modeling/python"]

[dev-dependencies]
bytemuck.workspace = true

[lints]
workspace = true
