[package]
name = "psyche-coordinator"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
psyche-core.workspace = true
async-trait.workspace = true
bytemuck.workspace = true
serde_with.workspace = true
serde.workspace = true
tracing.workspace = true
cfg_eval = "0.1.2"
ts-rs.workspace = true

[dev-dependencies]
psyche-test-support.workspace = true
postcard.workspace = true

[lints]
workspace = true
