[package]
name = "psyche-core"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
fast-math.workspace = true
rand = { workspace = true, optional = true }
serde.workspace = true
postcard.workspace = true
fnv = "1.0.7"
serde_arrays = "0.1.0"
bitvec = { git = "https://github.com/arilotter/bitvec", rev = "d33a2437f810ee4229457dfd1137d807914671f8", features = [
  "serde",
  "std",
] }
ts-rs.workspace = true
thiserror.workspace = true
data-encoding = "2.8.0"
sha2.workspace = true

[features]
rand = ["dep:rand"]

[dev-dependencies]
approx = "0.5.1"

[lints]
workspace = true
