[package]
name = "aether-eval"
version.workspace = true
license.workspace = true
edition = "2021"

[features]
parallelism = ["aether-modeling/parallelism"]
python = ["aether-modeling/python"]

[dependencies]
aether-core.workspace = true
aether-data-provider.workspace = true
aether-modeling.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_chacha.workspace = true
indicatif.workspace = true
tokenizers.workspace = true
tch.workspace = true
tracing.workspace = true
regex = "1.5"
tokio-util.workspace = true

# for examples
[dev-dependencies]
clap.workspace = true
tracing-subscriber = "0.3"

[lints]
workspace = true
