[package]
name = "aether-metrics"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
opentelemetry.workspace = true
sysinfo = "0.32.0"
tokio.workspace = true
nvml-wrapper = "0.11.0"
iroh-metrics = { version = "0.35.0", features = ["metrics"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
