[package]
name = "aether-modeling"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
tch.workspace = true
torch-sys.workspace = true
rand.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
memmap2.workspace = true
tokenizers.workspace = true
tracing.workspace = true
byteorder = "1.4.3"
safetensors = "0.3.0"
itertools = "0.14"
thiserror.workspace = true
tokio-util.workspace = true
aether-core.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-tch = { workspace = true, optional = true }
flume.workspace = true

# for examples
[dev-dependencies]
clap.workspace = true
clap-markdown.workspace = true
aether-data-provider.workspace = true
aether-network.workspace = true
aether-python-extension-impl.workspace = true
aether-tui.workspace = true
tokio.workspace = true
postcard.workspace = true

[features]
parallelism = ["tch/nccl", "torch-sys/nccl"]
python = ["pyo3", "pyo3-tch"]

[lints]
workspace = true
