[package]
name = "psyche-watcher"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
psyche-core.workspace = true
psyche-coordinator.workspace = true
psyche-tui.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytemuck.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
