[package]
name = "aether-watcher"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
aether-core.workspace = true
aether-coordinator.workspace = true
aether-tui.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytemuck.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
