[package]
name = "psyche-centralized-client"
version.workspace = true
edition = "2021"

[dependencies]
psyche-centralized-shared = { path = "../shared" }
psyche-core.workspace = true
psyche-client.workspace = true
psyche-event-sourcing.workspace = true
psyche-coordinator.workspace = true
psyche-eval.workspace = true
psyche-network.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
psyche-modeling.workspace = true
psyche-metrics.workspace = true
rand.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util.workspace = true
hf-hub.workspace = true
time.workspace = true
bytemuck.workspace = true
clap-markdown.workspace = true
hex = "0.4.3"
psyche-python-extension-impl = { workspace = true, optional = true }
tikv-jemallocator.workspace = true

[features]
parallelism = ["psyche-client/parallelism"]
python = ["psyche-python-extension-impl"]
