[package]
name = "aether-centralized-client"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
aether-centralized-shared = { path = "../shared" }
aether-core.workspace = true
aether-client.workspace = true
aether-event-sourcing.workspace = true
aether-coordinator.workspace = true
aether-eval.workspace = true
aether-network.workspace = true
aether-tui.workspace = true
aether-watcher.workspace = true
aether-modeling.workspace = true
aether-metrics.workspace = true
rand.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util.workspace = true
hf-hub.workspace = true
time.workspace = true
bytemuck.workspace = true
clap-markdown.workspace = true
hex = "0.4.3"
aether-python-extension-impl = { workspace = true, optional = true }
tikv-jemallocator.workspace = true

[features]
parallelism = ["aether-client/parallelism"]
python = ["aether-python-extension-impl"]

[lints]
workspace = true
