[package]
name = "psyche-centralized-local-testnet"
edition = "2021"
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
time.workspace = true
toml = "0.8.19"
clap-markdown.workspace = true
psyche-python-extension-impl = { workspace = true, optional = true }

[features]
python = ["psyche-python-extension-impl"]
