[package]
name = "aether-centralized-local-testnet"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
time.workspace = true
toml.workspace = true
clap-markdown.workspace = true

[features]
python = []
parallelism = []

[lints]
workspace = true
