[package]
name = "aether-centralized-server"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
aether-centralized-shared = { path = "../shared" }
aether-coordinator.workspace = true
aether-core.workspace = true
aether-data-provider = { workspace = true, features = ["remote"] }
aether-network.workspace = true
aether-tui.workspace = true
aether-watcher.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
rand.workspace = true
chrono.workspace = true
clap.workspace = true
bytemuck.workspace = true
toml.workspace = true
clap-markdown.workspace = true
aether-python-extension-impl = { workspace = true, optional = true }
tikv-jemallocator.workspace = true
wandb.workspace = true

[features]
python = ["dep:aether-python-extension-impl"]

[lints]
workspace = true
