[package]
name = "psyche-centralized-shared"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-watcher.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
serde.workspace = true

[dev-dependencies]
psyche-test-support.workspace = true
postcard.workspace = true

[lints]
workspace = true
