[package]
name = "aether-centralized-shared"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
aether-coordinator.workspace = true
aether-watcher.workspace = true
bytemuck.workspace = true
serde.workspace = true

[dev-dependencies]
aether-test-support.workspace = true

[lints]
workspace = true
