[package]
name = "aether-centralized-testing"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
aether-centralized-client = { path = "../client" }
aether-centralized-server = { path = "../server" }
aether-centralized-shared = { path = "../shared" }
aether-client.workspace = true
aether-coordinator.workspace = true
aether-network.workspace = true
aether-core.workspace = true
aether-test-support.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
rand.workspace = true
tracing.workspace = true
clap.workspace = true

[dev-dependencies]
test-log.workspace = true

[lints]
workspace = true
