[package]
name = "psyche-solana-client"
edition = "2021"
version.workspace = true

[dependencies]
anchor-client.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
clap-markdown.workspace = true
psyche-client.workspace = true
psyche-event-sourcing.workspace = true
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-data-provider.workspace = true
psyche-eval.workspace = true
psyche-metrics.workspace = true
psyche-modeling.workspace = true
psyche-network.workspace = true
psyche-solana-rpc.workspace = true
psyche-solana-coordinator.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
psyche-python-extension-impl = { workspace = true, optional = true }
tikv-jemallocator.workspace = true

[features]
parallelism = ["psyche-client/parallelism"]
python = ["psyche-python-extension-impl"]
