[package]
name = "psyche-decentralized-testing"
edition = "2021"
version.workspace = true

[dependencies]
psyche-solana-coordinator.workspace = true
psyche-solana-rpc.workspace = true
psyche-coordinator.workspace = true
tch.workspace = true
anchor-client.workspace = true
psyche-core.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bollard = "0.18.1"
serde_json.workspace = true
futures-util.workspace = true
thiserror.workspace = true
psyche-client.workspace = true
toml.workspace = true
psyche-python-extension-impl = { workspace = true, optional = true }

[dev-dependencies]
test-log.workspace = true
serial_test.workspace = true
rstest.workspace = true

[features]
python = ["psyche-python-extension-impl"]
parallelism = ["psyche-client/parallelism"]
