[package]
name = "psyche-sidecar"
edition = "2021"
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
futures.workspace = true
clap-markdown.workspace = true
tch.workspace = true

[features]
default = []
